[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Icons/lollislash.png" type="Texture" id=1]
[ext_resource path="res://Quest/QuestBubble.tscn" type="PackedScene" id=2]
[ext_resource path="res://Characters/NPCs/NPC.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 28.0179

[node name="NPC" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="QuestBubble" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -23 )
scale = Vector2( 0.2, 0.2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.250002, 0.250002 )
scale = Vector2( 0.152344, 0.152344 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Actions" type="Node" parent="."]

[connection signal="body_entered" from="." to="." method="_on_NPC_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_NPC_body_exited"]
